# ctp-wrapper

./: .gitignore  MANIFEST.in  README.md  go.mod  pyproject.toml
csrc/linux/: ctptrade_api.cpp
csrc/macos/: ctpquote_api.cpp  ctpquote_api.h  ctptrade_api.cpp  ctptrade_api.h
csrc/windows/: ctptrade_api.h
ctpapi/macos/: README.txt  changelog.txt
ctpgo/: cctpquote_api_linux.h  cctptrade_api_darwin.h  cctptrade_api_linux.h  ctp_datatype_darwin.go  ctp_datatype_windows.go  ctp_struct_linux.go  ctpquote_api_darwin.go  ctpquote_api_linux.go  ctpquote_api_windows.go  ctptrade_api_darwin.go  ctptrade_api_linux.go  ctptrade_api_windows.go
example/: go.mod  test_go.go  test_py.py
libs/: libctpquote_api.dylib  libctptrade_api.dylib
macos/ctpwrapper.xcworkspace/: contents.xcworkspacedata
pyctp/: __init__.py
pyctp/linux/: __init__.py  ctp_datatype.py  ctp_struct.py  ctpquote_api.py  ctptrade_api.py
pyctp/macos/: __init__.py  ctp_struct.py  ctpquote_api.py  ctptrade_api.py
pyctp/windows/: __init__.py  ctp_struct.py  ctpquote_api.py  ctptrade_api.py
windows/: ctpwrapper.sln
windows/ctpquote_api/: ctpquote_api.vcxproj  ctpquote_api.vcxproj.filters
windows/ctptrade_api/: ctptrade_api.vcxproj  ctptrade_api.vcxproj.filters
wrapctp_gen/: README.md  go.mod  wrapper_gen.go
wrapctp_gen/wrap_tpl/: cctpquote_api.h.go.tpl  cctptrade_api.h.go.tpl  ctp_datatype.go.tpl  ctp_datatype.py.tpl  ctp_struct.go.tpl  ctp_struct.py.tpl  ctpquote_api.cpp.tpl  ctpquote_api.h.tpl  ctpquote_api.py.tpl  ctpquote_api_nix.go.tpl  ctpquote_api_win.go.tpl  ctptrade_api.cpp.tpl  (+4 more)
(+8 files in other folders)
